# JobBit_Business/Request.cs
@@ -9,12 +9,44 @@ namespace JobBit_Business
 {
     public class Request
     {
+
+        public class AllRequestInfo
+        {
+            public int RequestID { get; set; }
+            public JobSeeker.AllJobSeekerInfo JobSeekerInfo { get; set; }
+            public Job.AllJobInfoDTO JobInfo { get; set; }
+            public DateTime Date { get; set; }
+            public bool? Status { get; set; }
+
+            public AllRequestInfo(int requestID, JobSeeker.AllJobSeekerInfo jobSeekerInfo,
+                Job.AllJobInfoDTO jobInfo, DateTime date, bool? status)
+            {
+                RequestID = requestID;
+                JobSeekerInfo = jobSeekerInfo;
+                JobInfo = jobInfo;
+                Date = date;
+                Status = status;
+            }
+        }
+
         public enum enMode { AddNew = 0, Update = 1 };
         private enMode Mode = enMode.AddNew;
         public RequestDTO requestDTO
         {
             get => new RequestDTO(this.RequestID, this.JobSeekerID, this.JobID, this.Date, this.Status);
         }
+
+        public AllRequestInfo allRequestInfo
+        {
+            get => new AllRequestInfo(
+                this.RequestID,
+                this.JobSeekerInfo.alljobseekerInfo,
+                this.JobInfo.allJobInfoDTO,
+                this.Date,
+                this.Status
+                );
+        }
+
         public int RequestID { get; set; }
         public int JobSeekerID { get; set; }
         public JobSeeker JobSeekerInfo;
@@ -99,6 +131,10 @@ namespace JobBit_Business
         public static bool IsJobSeekerApplyedForJob(int JobSeekerID, int JobID)
         {
             return RequestData.IsJobSeekerApplyedForJob(JobSeekerID, JobID);
+        }
+        public static List<JobSeekerApplications> GetAllJobSeekerApplications(int JobSeekerID)
+        {
+            return RequestData.GetAllJobSeekerApplications(JobSeekerID);
         }
 
     }
